@@ -28,7 +28,7 @@ labels: enhancement
 <!--- Information about code formatting: https://help.github.com/articles/basic-writing-and-formatting-syntax/#quoting-code --->
 
 ```hcl
-# Copy-paste any Terraform configurations for how the requested feature may be used. 
+# Copy-paste any Terraform configurations for how the requested feature may be used.
 ```
 
 ### References
